# borg

./: .gitignore  README.md  package.yaml  toy-robot.cabal
app/: Main.hs
auto/: run  test
data/: ex1.txt
src/: BoardActions.hs  BoardFunctions.hs  BoardProcessor.hs  Data.hs  Lib.hs  Parser.hs  Types.hs
test/: BoardFunctionsSpec.hs  BoardProcessorSpec.hs  Generators.hs  LawsSpec.hs  LibSpec.hs  ParserSpec.hs  Spec.hs
