  name:                toy-robot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/toy-robot#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Parser
                     , BoardProcessor
                     , BoardFunctions
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , lens
                     , mtl
  default-language:    Haskell2010

executable toy-robot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , toy-robot
  default-language:    Haskell2010

test-suite toy-robot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       BoardFunctionsSpec
                     , LibSpec
                     , ParserSpec
                     , LawsSpec
                     , Generators
  build-depends:       base
                     , toy-robot
                     , hspec
                     , QuickCheck
                     , lens
                     , checkers
                     , hspec-checkers
                     , mtl
  ghc-options:         -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/toy-robot
